  attributes are present.
  (Matthew Ryan, review by Nicolás Ojeda Bär)

- #9797, #9849: Eliminate the routine use of external commands in ocamltest.
  ocamltest no longer calls the mkdir, rm and ln external commands (at present,
  the only external command ocamltest uses is diff).
  (David Allsopp, review by Nicolás Ojeda Bär, Sébastien Hinderer and
   Xavier Leroy)

### Build system:

- #7121, #9558: Always the autoconf-discovered ld in PACKLD. For
  cross-compilation, this means the triplet-prefixed version will always be
  used.
  (David Allsopp, report by Adrian Nader, review by Sébastien Hinderer)

- #9332, #9518, #9529: Cease storing C dependencies in the codebase. C
  dependencies are generated on-the-fly in development mode. For incremental
  compilation, the MSVC ports require GCC to be present.
  (David Allsopp, review by Sébastien Hinderer, YAML-fu by Stephen Dolan)

- #9527: stop including configuration when running 'clean' rules
  to avoid C dependency recomputation.
  (Gabriel Scherer, review by David Allsopp)

- #9804: Build C stubs of libraries in otherlibs/ with debug info.
  (Stephen Dolan, review by Sébastien Hinderer and David Allsopp)

- #9824, #9837: Honour the CFLAGS and CPPFLAGS variables.
  (Sébastien Hinderer, review by David Allsopp)

### Bug fixes:

- #7902, #9556: Type-checker infers recursive type, even though -rectypes is
  off.
  (Jacques Garrigue, report by Francois Pottier, review by Leo White)

- #8747, #9709: incorrect principality warning on functional updates of records
  (Jacques Garrigue, report and review by Thomas Refis)

- #9469: Better backtraces for lazy values
  (Leo White, review by Nicolás Ojeda Bär)

- #9521, #9522: correctly fail when comparing functions
  with Closure and Infix tags.
  (Gabriel Scherer and Jeremy Yallop and Xavier Leroy,
   report by Twitter user @st_toHKR through Jun Furuse)

- #9611: maintain order of load path entries in various situations: when passing